# backend

./: .env.example  Makefile  README.md  docker-compose-tests.yml  docker-compose.yml  poetry.lock.bak  pyproject.toml  requirements.txt  run_tests.sh  vercel.json
.github/workflows/: tests.yml
app/: config.py  controllers.py  database.py  gemini_service.py  main.py  middleware.py  models.py  redis_client.py
tests/: conftest.py  test_controllers.py  test_database.py  test_middleware.py  test_models.py
